--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 APScheduler==3.6.3
+autopep8==1.5.7
 certifi==2021.5.30
+ptbcontrib @ git+https://github.com/python-telegram-bot/ptbcontrib.git@5fba74e4c45f25036dc802a14394f2e1b2d14acc
+pycodestyle==2.7.0
+python-dotenv==0.19.0
 python-telegram-bot==13.4
 pytz==2021.1
 six==1.16.0
+toml==0.10.2
 tornado==6.1
 tzlocal==3.0
