--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 APScheduler==3.6.3
 autopep8==1.5.7
 certifi==2021.5.30
+charset-normalizer==2.0.4
+idna==3.2
+numpy==1.21.2
+pandas==1.3.2
 ptbcontrib @ git+https://github.com/python-telegram-bot/ptbcontrib.git@5fba74e4c45f25036dc802a14394f2e1b2d14acc
 pycodestyle==2.7.0
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-telegram-bot==13.4
 pytz==2021.1
+requests==2.26.0
 six==1.16.0
 toml==0.10.2
 tornado==6.1
 tzlocal==3.0
+urllib3==1.26.6
